--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   <main>
     <h1>Hello, world!</h1>
     <p>Static page served through Cloudflare CI/CD.</p>
+    <p>
+      <a href="/health" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Check R2 health</a>
+    </p>
   </main>
 </body>
 </html>
