--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <p>
       <a href="/health" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Check R2 health</a>
     </p>
+    <p>
+      <a href="/health/d1" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Check D1 health</a>
+    </p>
   </main>
 </body>
 </html>
