--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <p>
       <a href="/health/d1" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Check D1 health</a>
     </p>
+    <p>
+      <a href="/demo/go" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Run Go/Wasm demo</a>
+    </p>
   </main>
 </body>
 </html>
