--- a/index.html
+++ b/index.html
@@ -3,55 +3,166 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello World</title>
+  <title>Hello World • cf-labroom</title>
   <style>
     :root {
-      font-family: "Helvetica Neue", Arial, sans-serif;
-      background: radial-gradient(circle at 20% 20%, #f0f7ff, #ffffff 40%),
-                  radial-gradient(circle at 80% 0%, #fff4d9, #ffffff 35%),
-                  linear-gradient(135deg, #f8fafc 0%, #ffffff 50%, #f7fbff 100%);
-      min-height: 100%;
+      font-family: "Inter", "Segoe UI", system-ui, sans-serif;
+      color: #0f172a;
+      background: #0b1120;
     }
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
-      display: grid;
-      place-items: center;
       min-height: 100vh;
-      color: #0f172a;
+      background: radial-gradient(circle at top, #1b2658, transparent 60%),
+                  radial-gradient(circle at 80% 20%, #0f7cf7, transparent 40%),
+                  #0b1120;
+      color: #e2e8f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 3rem 1rem;
     }
     main {
-      text-align: center;
-      padding: 3rem 2.5rem;
-      border-radius: 20px;
-      background: rgba(255, 255, 255, 0.9);
-      box-shadow: 0 20px 60px rgba(15, 23, 42, 0.12);
+      width: min(100%, 960px);
+      background: rgba(15, 23, 42, 0.9);
+      border-radius: 22px;
+      padding: 2.5rem;
+      box-shadow: 0 30px 80px rgba(2, 6, 23, 0.8);
+      border: 1px solid rgba(148, 163, 184, 0.2);
+    }
+    header {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      margin-bottom: 2rem;
     }
     h1 {
-      margin: 0 0 0.5rem;
-      font-size: clamp(2.5rem, 5vw, 3.25rem);
-      letter-spacing: 0.03em;
+      font-size: clamp(2.75rem, 4vw, 3.5rem);
+      margin: 0;
+    }
+    h2 {
+      font-size: 1.2rem;
+      font-weight: 500;
+      color: #94a3b8;
+      margin: 0;
     }
     p {
       margin: 0;
-      font-size: 1.05rem;
-      color: #475569;
+      line-height: 1.6;
+      color: #cbd5f5;
+    }
+    .badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.35rem;
+      padding: 0.35rem 0.9rem;
+      border-radius: 999px;
+      border: 1px solid rgba(79, 70, 229, 0.6);
+      color: #c7d2fe;
+      font-size: 0.85rem;
+      background: rgba(79, 70, 229, 0.15);
+      margin-bottom: 0.5rem;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    .card {
+      border-radius: 16px;
+      padding: 1.25rem;
+      background: rgba(15, 23, 42, 0.85);
+      border: 1px solid rgba(148, 163, 184, 0.2);
+      transition: border-color 0.3s ease, transform 0.3s ease;
+    }
+    .card:hover {
+      border-color: rgba(14, 165, 233, 0.9);
+      transform: translateY(-3px);
+    }
+    .card h3 {
+      margin-top: 0;
+      margin-bottom: 0.5rem;
+      font-size: 1.1rem;
+    }
+    .card a {
+      color: #38bdf8;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .status {
+      font-size: 1rem;
+      margin-top: 0.5rem;
+      color: #a5b4fc;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .status span {
+      width: 0.75rem;
+      height: 0.75rem;
+      border-radius: 50%;
+      background: #34d399;
+      display: inline-block;
+    }
+    footer {
+      margin-top: 2rem;
+      text-align: center;
+      color: #94a3b8;
+      font-size: 0.9rem;
+    }
+    @media (max-width: 480px) {
+      main {
+        padding: 2rem 1.25rem;
+      }
     }
   </style>
 </head>
 <body>
   <main>
-    <h1>Hello, world!</h1>
-    <p>Static page served through Cloudflare CI/CD.</p>
-    <p>
-      <a href="/health" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Check R2 health</a>
-    </p>
-    <p>
-      <a href="/health/d1" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Check D1 health</a>
-    </p>
-    <p>
-      <a href="/demo/go" style="color:#0ea5e9;text-decoration:none;font-weight:600;">Run Go/Wasm demo</a>
-    </p>
+    <header>
+      <div class="badge">Cloudflare Pages + Workers</div>
+      <h1>Hello, world.</h1>
+      <h2>Fresh build for cf-labroom with live links to /health, /health/d1, and the Go→Wasm demo.</h2>
+    </header>
+    <section class="grid">
+      <article class="card">
+        <h3>Static production</h3>
+        <p>Assets are uploaded directly from the repo root via the Pages workflow. Static files live beside the worker code.</p>
+        <div class="status"><span></span>Assets deployed</div>
+      </article>
+      <article class="card">
+        <h3>R2 health</h3>
+        <p>Touch <code>/health</code> to confirm bucket access. Lists up to ten objects so you can see what the connector reads.</p>
+        <a href="/health">Check R2 health</a>
+      </article>
+      <article class="card">
+        <h3>D1 health</h3>
+        <p>Send requests to <code>/health/d1</code> for connectivity checks and lightweight schema introspection.</p>
+        <a href="/health/d1">Check D1 health</a>
+      </article>
+      <article class="card">
+        <h3>Go → Wasm</h3>
+        <p>The worker currently responds with a stub. Build your own TinyGo module and drop it in <code>wasm/demo.wasm</code> to enable the demo.</p>
+        <a href="/demo/go">View Go/Wasm stub</a>
+      </article>
+    </section>
+    <p>Current local time: <span id="clock">loading…</span></p>
+    <footer>cf-labroom © Cloudflare</footer>
   </main>
+  <script>
+    const clockEl = document.getElementById("clock");
+    function updateClock() {
+      const now = new Date();
+      clockEl.textContent = now.toLocaleTimeString(undefined, { hour12: false });
+    }
+    if (clockEl) {
+      updateClock();
+      setInterval(updateClock, 1000);
+    }
+  </script>
 </body>
 </html>
