--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
   <main>
     <h1>Hello, world.</h1>
-    <h2>Fresh build for cf-labroom with live links to /health, /health/d1, and the Go→Wasm demo.</h2>
+    <h2>Fresh build for cf-labroom with demo.</h2>
   </main>
 </body>
 </html>
